fixed alignment issue on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,11 +10,15 @@
 .img-container{
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 12px;
+    
 }
 
 .img-container img{
   height: 400px;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-and-description-container img{
@@ -49,6 +53,8 @@
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
+    justify-content: center;
+    align-items: center;
   }
   
   /* Create three equal columns that sits next to each other */
@@ -73,7 +79,7 @@
 
     .img-and-description-container img{
       height: 400px;
-      max-width: 90%;
+      max-width: 100%;
     }
     
   }
